task1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-api-ingress
  namespace: payments
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.dodopayments.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ledger-api
            port:
              number: 8080
  tls:
  - hosts:
    - api.dodopayments.tech
    secretName: ledger-api-tls
